# BroNode

./: .gitignore  BroNode-macos.spec  BroNode.spec  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPERS.md  Dockerfile  KNOWN_ISSUES.md  PACKAGING.md  README.md  RELEASING.md  USAGE.md  app.py  build.ps1  elemental_chat_catalog_config.json  entrypoint.sh  install_happ  requirements.txt  run_local.bat  run_local.ps1  turnserver.conf.template  uninstall.ps1
.agents/releases/: 2026-03-13-v0.1.0-alpha1-audit.md  2026-03-13-v0.1.0-alpha1-notes.md
docker/: .env  .gitmodules  CHANGELOG.md  CROSS_IMAGE_COMPATIBILITY_TEST_RESULTS.md  DEVELOPERS.md  Dockerfile  Dockerfile.hc-0.5.6  Dockerfile.hc-0.6.0-custom-go-pion  Dockerfile.hc-0.6.0-dev-go-pion  Dockerfile.hc-0.6.0-go-pion  Dockerfile.hc-0.6.1-dev  Dockerfile.hc-0.6.1-rc.1  Dockerfile.unyt  E2E.md  LOG_SENDER_DEVELOPER_GUIDE.md  LOG_SENDER_QUICKSTART.md  MULTI_IMAGE_STRATEGY.md  README.md  TESTING.md  build-images.sh  conductor-config-0.5.6.template.yaml  conductor-config-0.6.0.template.yaml  conductor-config-0.6.1.template.yaml  conductor-config.template.yaml  docker-compose.base.yml  docker-compose.hc-0.5.6.yml  docker-compose.hc-0.6.0-dev-go-pion.yml  docker-compose.hc-0.6.1.yml  docker-compose.unyt.yml  docker-compose.yml  entrypoint-alt.sh  entrypoint.sh  happ_config_file  happ_tool  install_happ  kando-badsha.json  kando-badurl.json  kando-nosha.json  kando-realsha.json  kando-webhapp-badsha.json  (+25 more)
docs/: INSTALL_AND_UNINSTALL.md  LEGACY_EDGE_NODE_README.md  LEGACY_EDGE_NODE_USAGE.md  UPSTREAM_EDGE_NODE.md
holos/: Makefile  README.md  TODO.md  busybox.config  fakeroot.sh  holos-buildroot-2025.08.config  isolinux.cfg  kernel-config-x86_64.config  pre-fs-image.sh  vm-boot.sh
holos/rust/holos-config/: Cargo.toml  channels.yaml  test-cmdline
holos/rust/holos-config/contrib/: default.yaml  dell-xps13.yaml  holoport-plus.yaml  holoport.yaml  virtio-vm.yaml
holos/rust/holos-config/src/: blockdev.rs  install.rs  led.rs  lib.rs  main.rs  models.rs  network.rs  update.rs  utils.rs
holos/rust/holos-config/templates/: wpa_supplicant-insecure.conf  wpa_supplicant-wpa2.conf
issues/: 1.md  Update-eudev-rules-to-minimize-permissions-and-ensure-safety.md  audit-harden-openssh-config.md  audit-root-overlay-scripts.md  audit_harden_openssh_config.md  audit_root_overlay_scripts.md  update-eudev-rules.md
packaging/: build_linux.sh  build_macos.sh  package_linux_tarball.sh  package_macos_zip.sh  smoke_step1.py
tools/: README.md
tools/happ_config_file/: .gitignore  Cargo.toml  README.md
tools/happ_config_file/src/: main.rs
windows-gui/: .gitignore  BroNode-macos.spec  BroNode.spec  PACKAGING.md  README.md  RELEASING.md  app.py  kando_catalog_config.json
(+52 files in other folders)
