[package]
name = "happ_config_file"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
url = "2.5"
regex = "1.10"
holo_hash = {version = "0.5.6", features = ["encoding"]}
