[package]
name = "holos-config"
version = "0.0.7"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bitmask-enum = "2.2.5"
clap = { version = "4.5.48", features = ["derive"] }
cpio = "0.4.1"
env_logger = "0.11.8"
bzip2 = "0.6"
ipnet = { version = "2.11.0", features = ["serde"] }
local-ip-address = "0.6.5"
log = "0.4.28"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_derive = "1.0.226"
serde_with = { version = "3.14.1", features = ["hex"] }
serde_yaml = "0.9.34"
syslog = "7.0.0"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.23.0"
